---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 20.06.2019
  Changes:
    - Complete restructure of the mod to draw the tilegrid as you drag
    - Updated tapeline icon

---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 14.06.2019
  Changes:
    - Organized mod settings
    - Removed limitations on line width setting
    - Removed "tapeline tool" item from item filters list
    - Removed hotkey definition from shortcut button label
    - Various small optimizations

---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 12.03.2019
  Changes:
    - Minor optimizations to tilegrid area logic (thanks Nexala!)
  Bugfixes:
    - Fixed that using the keyboard shortcut with a full inventory would delete whatever was in your hand
    - Fixed default hotkey not actually being Alt+M

---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 11.03.2019
  Features:
    - Added color customization settings
  Changes:
    - Optimized tilegrid drawing logic (it is now 40x faster!)
    - Shift+selection color is now blue instead of green
    - Updated locale
    - Changed default color pallete
    - Changed default hotkey to Alt+M (from Ctrl+M)

---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 10.03.2019
  Features:
    - Added alternate selection mode (shift+select) that splits the tapeline into a configurable amount of groups, and displays the midpoint of both axes
    - Added option to change the number of sections an alternate selection is split into
  Changes:
    - A tapeline is now only visible to the player placing it
    - Made tapeline grid lines opaque to increase visibility