@@ -8,9 +8,6 @@
 		},
 		{
 			"path": "D:\\Caleb\\Development\\Factorio\\References"
-		},
-		{
-			"path": "D:\\Caleb\\Development\\Factorio\\Mods\\factorio-testworld"
 		}
 	],
 	"settings": {}
