@@ -1,9 +1,13 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.0
 Date: 20.06.2019
+  Features:
+    - Added tilegrid settings GUI
+    - Added the ability to restrict a tilegrid to cardinal directions when drawing
+    - Added semi-permanent tilegrids that can be edited or dismissed
   Changes:
-    - Complete restructure of the mod to draw the tilegrid as you drag
-    - Updated tapeline icon
+    - Completely rewrote the mod to draw the tilegrid as you drag, instead of using a selection tool
+    - Refined tapeline icon
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.0
